--- a/index.html
+++ b/index.html
@@ -2246,7 +2246,7 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                 data-widget_type="weddingpress-wellcome.default">
                 <div class="elementor-widget-container">
 
-                  <div class="modalx removeModals" data-sampul=""
+                  <div class="modalx" data-sampul=""
                     style="background-image:
                     url(&quot;&quot;);">
 
