--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="ri-home-4-line"></i>
                             </span>
-                            <span class="elementor-icon-list-text">Kediaman Mempelai Wanita
+                            <span class="elementor-icon-list-text">Jl. Masjid Al Falah No.14, RT.6/RW.1, Kamal, Kec. Kalideres, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11810
                             </span>
                           </li>
                         </ul>
@@ -1543,7 +1543,7 @@
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="ri-home-4-line"></i>
                             </span>
-                            <span class="elementor-icon-list-text">Kediaman Mempelai Wanita</span>
+                            <span class="elementor-icon-list-text">Jl. Masjid Al Falah No.14, RT.6/RW.1, Kamal, Kec. Kalideres, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11810</span>
                           </li>
                         </ul>
                       </div>
@@ -1567,7 +1567,7 @@
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                          <a href="https://maps.app.goo.gl/uAaWb76UZXyeGbaG9"
+                          <a href="https://goo.gl/maps/ZDPpmMTh8bS8kPnU8"
                             class="elementor-button-link elementor-button elementor-size-sm" role="button">
                             <span class="elementor-button-content-wrapper">
                               <span class="elementor-button-icon elementor-align-icon-left">
@@ -1586,7 +1586,7 @@
                       <div class="elementor-widget-container">
                         <div class="elementor-custom-embed">
                           <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                            src="https://maps.google.com/maps?q=mts%20algaosiyah&amp;t=m&amp;z=14&amp;output=embed&amp;iwloc=near"
+                            src="https://maps.google.com/maps?q=arizqie&amp;t=m&amp;z=14&amp;output=embed&amp;iwloc=near"
                             title="hotel indoluxw" aria-label="hotel
                               indoluxw"></iframe>
                         </div>
@@ -1878,7 +1878,7 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                       <div class="elementor-widget-container">
                         <div class="elementor-image img">
                           <img
-                            src="https://1.bp.blogspot.com/-Iq0Ztu117_8/XzNYaM4ABdI/AAAAAAAAHA0/MabT7B02ErIzty8g26JvnC6cPeBZtATNgCLcBGAsYHQ/s1000/logo-ovo.png"
+                            src="https://amateurjersey.com/sites/default/files/icon/online-payment.png"
                             style="
                                 width: 225px;
                                 height: 100px;
@@ -1886,7 +1886,7 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                               " title="bri" alt="bri" />
                         </div>
 
-                        <div class="head-title">Suci</div>
+                        <div class="head-title">Suci Sofyati</div>
                         <div class="elementor-button-wrapper">
                           <div class="copy-content spancontent">
                             08990752505
@@ -1965,7 +1965,7 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                       <div class="elementor-widget-container">
                         <div class="elementor-image img">
                           <img
-                            src="https://1.bp.blogspot.com/-ENNeQXUXMPg/XwcgZZAcfRI/AAAAAAAAGlU/NdqxwMCYyNA49bSME2QHNmwJ-jBD-99PACK4BGAsYHg/s1000/logo-gopay.png"
+                            src="https://www.freepnglogos.com/uploads/logo-bca-png/bank-central-asia-logo-bank-central-asia-bca-format-cdr-png-gudril-1.png"
                             style="
                                 width: 225px;
                                 height: 100px;
@@ -1976,7 +1976,7 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                         <div class="head-title">Suci Sofyati</div>
                         <div class="elementor-button-wrapper">
                           <div class="copy-content spancontent">
-                            08990752505
+                            7570694809
                           </div>
                           <a style="cursor: pointer" onclick="copyText(this)" data-message="Berhasil disalin"
                             class="elementor-button" role="button">
@@ -2032,95 +2032,8 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                   </div>
                 </div>
                 <!-- ini pentutupan -->
-                <!-- ini tambahan -->
-                <div
-                  class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-e4bb98e animated-slow wdp-sticky-section-no animated zoomIn"
-                  data-id="e4bb98e" data-element_type="column"
-                  data-settings='{"background_background":"classic","animation":"zoomIn"}'>
-                  <div class="elementor-widget-wrap elementor-element-populated">
-                    <div
-                      class="elementor-element elementor-element-b9a201e elementor-widget-divider--view-line wdp-sticky-section-no elementor-widget elementor-widget-divider"
-                      data-id="b9a201e" data-element_type="widget" data-widget_type="divider.default">
-                      <div class="elementor-widget-container">
-                        <div class="elementor-divider">
-                          <span class="elementor-divider-separator"> </span>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="elementor-element elementor-element-894b9da elementor-mobile-align-center elementor-align-center wdp-sticky-section-no elementor-widget elementor-widget-weddingpress-copy-text"
-                      data-id="894b9da" data-element_type="widget" data-widget_type="weddingpress-copy-text.default">
-                      <div class="elementor-widget-container">
-                        <div class="elementor-image img">
-                          <img
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Logo_dana_blue.svg/1200px-Logo_dana_blue.svg.png"
-                            style="
-                                width: 225px;
-                                height: 100px;
-                                object-fit: contain;
-                              " title="dana" alt="dana" />
-                        </div>
-
-                        <div class="head-title">Suci Sofyati</div>
-                        <div class="elementor-button-wrapper">
-                          <div class="copy-content spancontent">
-                            08990752505
-                          </div>
-                          <a style="cursor: pointer" onclick="copyText(this)" data-message="Berhasil disalin"
-                            class="elementor-button" role="button">
-                            <div class="elementor-button-content-wrapper">
-                              <span class="elementor-button-icon elementor-align-icon-left">
-                                <i aria-hidden="true" class="ri-file-copy-line"></i>
-                              </span>
-                              <span class="elementor-button-text">Copy No. Dana</span>
-                            </div>
-                          </a>
-                        </div>
-
-                        <style type="text/css">
-                          .spancontent {
-                            padding-bottom: 20px;
-                          }
-
-                          .copy-content {
-                            color: #6ec1e4;
-                            text-align: center;
-                          }
-
-                          .head-title {
-                            color: #6ec1e4;
-                            text-align: center;
-                          }
-                        </style>
-                        <script>
-                          function copyText(el) {
-                            var content = jQuery(el)
-                              .siblings("div.copy-content")
-                              .html();
-                            var temp = jQuery("<textarea>");
-                            jQuery("body").append(temp);
-                            temp
-                              .val(content.replace(/<br ?\/?>/g, "\n"))
-                              .select();
-                            document.execCommand("copy");
-                            temp.remove();
-                            var text = jQuery(el).html();
-                            jQuery(el).html(jQuery(el).data("message"));
-                            var counter = 0;
-                            var interval = setInterval(function () {
-                              counter++;
-                              if (counter == 1) {
-                                jQuery(el).html(text);
-                              }
-                            }, 500);
-                          }
-                        </script>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- ini pentutupan -->
-                <div
+              
+                <!-- <div
                   class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-a0e6712 animated-slow wdp-sticky-section-no animated zoomIn"
                   data-id="a0e6712" data-element_type="column"
                   data-settings='{"background_background":"classic","animation":"zoomIn"}'>
@@ -2202,7 +2115,7 @@ protokol pencegahan penyebaran COVID-19</p>		</div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </section>
           </div>
