--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
   <link rel="manifest" href="manifest.json">
   <script src="script.js" defer></script>
 
+  <script src="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.js"></script>
+  <link rel="preload" href="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.wasm" as="fetch" crossOrigin="anonymous">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2220046059';
+    var serviceWorkerVersion = '1395337921';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
