--- a/index.html
+++ b/index.html
@@ -37,12 +37,29 @@
   <link rel="preload" href="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.wasm" as="fetch" crossOrigin="anonymous">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1395337921';
+    var serviceWorkerVersion = '2089773799';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <style>
+    .container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
+    .indicator{
+    width: 15vw;
+    }
+
+  </style>
 </head>
-<body>
+<body style="overflow: hidden">
+<div id="loading_indicator" class="container">
+  <img class="indicator" src="./assets/loading.gif"/>
+</div>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -77,6 +94,15 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+
+  window.onLoad = function(){
+  setTimeout(function(){
+  var loadingIndicator = document.getElementById("loading_indicator);
+  if (loadingIndicator){
+  loadingIndicator.remove();
+  }
+  },10000);
+  }
   </script>
 </body>
 </html>
